test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/cast_to_array_type_3.plx
pub fn main(none) i32 {
    arr: [6]i64;
    #  casts to array type are illegal
    return (cast<[2][3]i64>(arr))
}
